--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/educational-resources-and-services/bibletags-ui-helper.git"
   },
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/educational-resources-and-services/bibletags-ui-helper/issues"
