--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bibletags-ui-helper",
   "version": "0.1.0",
   "scripts": {},
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/educational-resources-and-services/bibletags-ui-helper.git"
