--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@bibletags/bibletags-ui-helper",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "scripts": {
+    "confirm": "read -p 'Are you sure? ' -n 1 -r && echo '\n' && [[ $REPLY =~ ^[Yy]$ ]]",
     "update-patch": "npm run go-update-patch -s",
     "update-major": "npm run go-update-major -s",
     "update-minor": "npm run go-update-minor -s",
-    "go-update-patch": "echo '-------------------------------------------\nUpdate version (PATCH) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm version patch && npm run publish-to-npm",
-    "go-update-minor": "echo '-------------------------------------------\nUpdate version (MINOR) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm version minor && npm run publish-to-npm",
-    "go-update-major": "echo '-------------------------------------------\nUpdate version (MAJOR) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm version major && npm run publish-to-npm",
-    "publish-to-npm": "npm i && npm run test && npm publish --access public && echo '\nSUCCESS!\n'"
+    "go-update-patch": "echo '-------------------------------------------\nUpdate version (PATCH) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm i && npm version patch && npm run publish-to-npm",
+    "go-update-minor": "echo '-------------------------------------------\nUpdate version (MINOR) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm i && npm version minor && npm run publish-to-npm",
+    "go-update-major": "echo '-------------------------------------------\nUpdate version (MAJOR) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm i && npm version major && npm run publish-to-npm",
+    "publish-to-npm": "npm publish --access public && echo '\nSUCCESS!\n'"
   },
   "repository": {
     "type": "git",
@@ -22,11 +23,11 @@
   "homepage": "https://bibletags.org",
   "author": "Andy Hubert",
   "funding": {
-    "type" : "individual",
-    "url" : "https://gofundme.com/f/yarn4-bible-tags"
+    "type": "individual",
+    "url": "https://gofundme.com/f/yarn4-bible-tags"
   },
   "dependencies": {
-    "@bibletags/bibletags-versification": "^0.1.6",
+    "@bibletags/bibletags-versification": "^0.1.7",
     "md5": "2.2.1",
     "regexpu-core": "4.2.0",
     "usfm-js": "github:unfoldingWord/usfm-js#abe6833688b10b202e4b848715eca883fce7b89a"
