--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.2.5",
   "scripts": {
     "confirm": "read -p 'Are you sure? ' -n 1 -r && echo '\n' && [[ $REPLY =~ ^[Yy]$ ]]",
+    "build-for-node": "npx babel --presets=@babel/preset-env src --out-dir node_build",
     "update-patch": "npm run go-update-patch -s",
     "update-minor": "npm run go-update-minor -s",
     "update-major": "npm run go-update-major -s",
-    "go-update-patch": "echo '-------------------------------------------\nUpdate version (PATCH) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm i && npm version patch && npm run publish-to-npm",
-    "go-update-minor": "echo '-------------------------------------------\nUpdate version (MINOR) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm i && npm version minor && npm run publish-to-npm",
-    "go-update-major": "echo '-------------------------------------------\nUpdate version (MAJOR) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm i && npm version major && npm run publish-to-npm",
+    "go-update-patch": "echo '-------------------------------------------\nUpdate version (PATCH) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm i && npm run build-for-node && npm version patch && npm run publish-to-npm",
+    "go-update-minor": "echo '-------------------------------------------\nUpdate version (MINOR) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm i && npm run build-for-node && npm version minor && npm run publish-to-npm",
+    "go-update-major": "echo '-------------------------------------------\nUpdate version (MAJOR) and deploy to npm...\n-------------------------------------------\n' && npm run confirm && npm i && npm run build-for-node && npm version major && npm run publish-to-npm",
     "publish-to-npm": "npm publish --access public && echo '\nSUCCESS!\n'"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/educational-resources-and-services/bibletags-ui-helper.git"
   },
-  "main": "src/index.js",
+  "main": "node_build/index.js",
+  "module": "src/index.js",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/educational-resources-and-services/bibletags-ui-data/issues"
@@ -27,9 +29,13 @@
     "url": "https://gofundme.com/f/yarn4-bible-tags"
   },
   "dependencies": {
-    "@bibletags/bibletags-versification": "^0.2.0",
+    "@bibletags/bibletags-versification": "^0.2.8",
     "md5": "2.2.1",
-    "regexpu-core": "4.2.0",
     "usfm-js": "github:unfoldingWord/usfm-js#abe6833688b10b202e4b848715eca883fce7b89a"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11"
   }
 }
