--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@bibletags/bibletags-versification": "^0.2.8",
     "md5": "2.2.1",
+    "regenerator-runtime": "^0.13.9",
     "usfm-js": "github:unfoldingWord/usfm-js#abe6833688b10b202e4b848715eca883fce7b89a"
   },
   "devDependencies": {
